Fix the style of the actions slots to fit in one row on small devices

--- a/client/action-button/action-button.scss
+++ b/client/action-button/action-button.scss
@@ -1,14 +1,16 @@
 .action-button {
   -webkit-appearance: none;
 
-  width: 64px;
-  height: 64px;
+  width: 60px;
+  height: 60px;
   background-color: transparent;
   background-size: 50px 50px;
   background-repeat: no-repeat;
   background-position: center;
   border: 0;
-  padding: 7px;
+  padding: 5px;
+  outline: none;
+
 
   &.current {
     background-color: #80DDCB;
